--- a/src/styles/Cat.css
+++ b/src/styles/Cat.css
@@ -5,7 +5,7 @@
     background-color: var(--mauve);
     margin-top: 10%;
     margin-bottom: -11%;
-    margin-left: 15%; 
+    margin-left: 15%;
 }
 
 .ear {
@@ -209,5 +209,11 @@
 
     100% {
         height: 0;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .cat {
+        display: none;
     }
 }
