--- a/src/styles/SidebarNav.css
+++ b/src/styles/SidebarNav.css
@@ -9,10 +9,6 @@
     background-color: transparent;
 }
 
-.rs-sidenav-subtle {
-    background-color: transparent !important;
-}
-
 .sidebar-links {
     display: flex;
     flex-direction: column;
@@ -27,11 +23,11 @@
 
 a {
     text-decoration: none !important;
-    color: var(--lightest-pink) !important;
+    color: var(--accent) !important;
 }
 
 a:hover {
-    color: var(--transparent-mauve) !important;
+    color: var(--lightest-pink) !important;
 }
 
 .sidebar-logos {
@@ -41,10 +37,6 @@ a:hover {
     flex-direction: row;
     justify-content: space-between;
     padding-bottom: 8px;
-}
-
-img {
-    height: 18px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -68,16 +60,12 @@ img {
         justify-content: space-around;
         padding-left: 50%;
     }
-
-    img {
-        height: 12px;
-    }
 }
 
 @media only screen and (max-width: 600px) {
     .sidebar-nav {
-        position: unset;
         align-items: center;
+        background-color: var(--mauve);
     }
 
     .sidebar-logos {
