--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,7 +1,8 @@
 :root {
-    --mauve: rgb(111, 93, 93);
+    --mauve: rgb(85, 70, 70);
     --pink: rgb(213, 180, 180);
     --faded-pink: rgb(228, 208, 208);
     --lightest-pink: rgb(245, 235, 235);
     --transparent-mauve: rgb(151, 130, 130);
+    --accent: rgb(255, 193, 100);
 }
