--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,5 +1,6 @@
 :root {
     --mauve: rgb(85, 70, 70);
+    --light-mauve: rgb(112, 92, 92);
     --pink: rgb(213, 180, 180);
     --faded-pink: rgb(228, 208, 208);
     --lightest-pink: rgb(245, 235, 235);
